[metadata]
name = httptest
author = John Andersen
author_email = johnandersenpdx@gmail.com
maintainer = John Andersen
maintainer_email = johnandersenpdx@gmail.com
license = MIT
description = Run temporary http.server instances on random ports for testing
url = https://github.com/pdxjohnny/httptest
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    unittesting
    testing
    http
    api
    test
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
entry_points = file: entry_points.txt
setup_requires =
    setuptools_scm[toml]>=3.4.3

[options.extras_require]
dev =
    coverage
    codecov
    twine
    setuptools_scm[toml]>=3.4.3
    black==19.10b0
