
[metadata]
name = httptest
description = Add unit tests to your http client
long_description = file: README.md
author = John Andersen
author_email = johnandersenpdx@gmail.com
maintainer = John Andersen
maintainer_email = johnandersenpdx@gmail.com
url = https://github.com/pdxjohnny/httptest
license = MIT
keywords =
    unittesting
    testing
    http
    api
    test
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
entry_points = file: entry_points.txt
setup_requires =
    setuptools_scm[toml]>=3.4.3

[options.extras_require]
dev =
    build
    twine
    setuptools_scm[toml]>=3.4.3
